# stock-research-platform

./: .dockerignore  .gitignore  README.md  config.toml  docker-compose.yml  stock-research-platform.code-workspace
.github/: copilot-instructions.md
.github/agents/: data-quant-engineer.agent.md  data-quant-enginner.agent.md  pydantic-ai-expert.agent.md  reflex-dev-expert.agent.md  streamlit-app-expert.agent.md  streamlit-to-reflex.agent.md
.github/chatmodes/: reflex-app-expert.chatmode.md  streamlit-app-expert.chatmode.md
.github/workflows/: ci-docker-build.yml
app/: pyproject.toml
app/ui/: ui.py
core/: pyproject.toml
core/src/stocksense/: __init__.py  config.py  types.py
core/src/stocksense/ai/: models.py
core/src/stocksense/ai/agents/: __init__.py  _company_analysis.py  _sql.py
core/src/stocksense/data/: __init__.py  _db.py  _nse.py  exchange.py  types.py  yahoo.py
core/src/stocksense/strategy/: __init__.py  analysis.py
core/src/stocksense/strategy/ta/: cycle.py  momentum.py  overlap_study.py  pattern_recognition.py  stats.py  trend.py  volatility.py  volume.py
core/src/stocksense/tools/: sql.py
core/src/stocksense/utils/: __init__.py  _helpers.py
core/tests/: test_config.py  test_config_resolution.py  test_utils.py  test_version.py
core/tests/tests_data/: test_db.py  test_nse.py  test_yahoo.py
core/tests/tests_strategy/: test_cycle.py  test_momentum.py  test_overlap_study.py  test_trend.py  test_volatility.py  test_volume.py
core/tests/tests_tools/: test_sql.py
snapshot/: Dockerfile  automation.ps1  automation.sh  pyproject.toml  snapshot_data_compress.py  snapshot_data_compress.sh  snapshot_data_decompress.py  snapshot_data_decompress.sh
stockdb/: .dockerignore  Dockerfile  main.py  pyproject.toml
stockdb/api/: __init__.py  config.py  data.py  models.py
stockdb/api/dependency/: __init__.py  utils.py
stockdb/api/routers/: bulk.py  ops.py  per_security.py  tasks.py
stockdb/pipeline/: create_table.py  exchange_equity_tableinfo.py  ticker_history_data_download.py
stockdb/tests/: test_models.py  test_setup.py
stockdb/tests/tests_api/: test_data.py  test_root.py
stockdb/tests/tests_api/tests_routers/: test_per_security.py
stockdb/tests/tests_pipeline/: test_download_entire.py  test_download_specific.py
stocksense-app/: pyproject.toml  rxconfig.py
stocksense-app/webapp/: webapp.py
stocksense-app/webapp/components/: inputs.py  layout.py  nav_config.py  navbar.py  sidebar.py
stocksense-app/webapp/pages/: __init__.py  home.py
stocksense-app/webapp/pages/ai/: __init__.py  chat.py  index.py  research.py
stocksense-app/webapp/pages/management/: __init__.py  configuration.py  index.py  task.py
stocksense-app/webapp/pages/playground/: __init__.py  data.py  index.py  strategy.py
stocksense-app/webapp/state/: __init__.py  home.py  management.py  manager.py  model.py  shared.py
web_app/: pyproject.toml
web_app/ui/: ui.py
webapp/: main.py  pyproject.toml  run.py  rxconfig.py
webapp/.streamlit/: config.toml
webapp/app/: __init__.py  app.py  config.py  state.py
webapp/app/components/: interactive.py
webapp/app/components/common/: buttons.py
webapp/app/core/: utils.py
webapp/app/pages/: data.py  home.py  management.py
webapp/app/pages/ai/: _helper.py  chat.py  research.py
webapp/app/pages/management/: configuration.py  task.py
webapp/app/pages/playground/: __init__.py  _helper.py  data.py  strategy.py
webapp/app/state/: manager.py  model.py
