[project]
name = "Stocksense-Core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Akash Desarda", email = "desardaakash@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.35.2",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "stocksense"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.0",
]
