[project]
name = "Stocksense-Core"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Akash Desarda", email = "desardaakash@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "httpx>=0.28.1",
    "orjson>=3.11.4",
    "polars[deltalake,pyarrow]>=1.35.2",
    "rich>=14.2.0",
    "sqlglot>=27.29.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "stocksense"

[dependency-groups]
dev = ["ipykernel>=7.1.0", "pytest>=9.0.0"]
