[project]
name = "stockdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.3.0",
    "fastapi>=0.116.1",
    "polars[deltalake,pyarrow]>=1.33.0",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "scipy>=1.16.2",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "notebook>=7.4.5",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "api"
module-root = ""
