[project]
name = "stocksense-app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "reflex==0.8.14",
]

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
