[project]
name = "stocksense-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "streamlit>=1.50.0",
    "streamlit-community-navigation-bar>=4.7.11",
]

[dependency-groups]
dev = ["ipykernel>=7.0.1"]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""
